@@ -8,8 +8,9 @@ ser (0.8.10) unstable; urgency=low
 
   * modules updates (sms, jabber)
 
- -- Andrei Pelinescu-Onciul <pelinescu-onciul@fokus.gmd.de>  Mon, 4 Nov 2002
- 18:20:18 +0200
+  * the jabber module is in a separate package now (it depends on libexpat)
+
+ -- Andrei Pelinescu-Onciul <pelinescu-onciul@fokus.gmd.de>  Tue, 4 Nov 2002 17:23:37 +0200
 
 ser (0.8.9) unstable; urgency=low
 
